// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text-button [snapshot] > disabled 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-disabled"
  disabled=""
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > size: lg 1`] = `
<button
  class="vesper-text-button vesper-text-button-lg vesper-text-button-contrast"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > size: md 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-contrast"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > size: sm 1`] = `
<button
  class="vesper-text-button vesper-text-button-sm vesper-text-button-contrast"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: accent 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-accent"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: contrast 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-contrast"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: danger 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-danger"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: info 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-info"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: pink 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-pink"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: purple 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-purple"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: subtle 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-subtle"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: success 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-success"
>
  Button Text
</button>
`;

exports[`text-button [snapshot] > variant: warning 1`] = `
<button
  class="vesper-text-button vesper-text-button-md vesper-text-button-warning"
>
  Button Text
</button>
`;
